--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
             </li>
         </ul>
     </section>
+
+    <footer class="footer">
+        <h6>2022 - Edson Silva</h6>
+
+        <ul class="footer__social">
+            <li>
+                <i class="fab fa-linkedin"></i>
+            </li>
+            <li>
+                <i class="fab fa-skype"></i>
+            </li>
+            <li>
+                <i class="fab fa-whatsapp"></i>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
